--- a/css/custom.css
+++ b/css/custom.css
@@ -5,8 +5,5 @@
     ;
     font-family:Pacifico
         ;font-size:
-        60px;text-shadow:0 1px 2px rgba(0,0,0,0.6);text-align:center;margin-bottom:40px}
+        60px;text-align:center;margin-bottom:40px}
 
-.cursive{
-    margin-top:10px; font-family:Pacifico
-}
